Fix form badges wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -242,6 +242,7 @@ header p {
 .form {
     display: flex;
     gap: 3px;
+    flex-wrap: wrap;
 }
 
 .form-badge {
